# ZhiFei_BizSystem

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.monitoring.yml  pyproject.toml  requirements.txt  sample_shigong.txt  sample_shigong_action_missing.txt  sample_shigong_empty_promises.txt
.github/: pull_request_template.md
app/: app.py  auth.py  cache.py  cli.py  config.py  feedback_governance.py  feedback_learning.py  ground_truth_intake.py  i18n.py  index_project_views.py  main.py  metrics.py  observability.py  project_taxonomy.py  qingtian_dual_track.py  rate_limit.py  runtime_logs.py  runtime_security.py  schemas.py  scoring_diagnostics.py  storage.py  submission_diagnostics.py  submission_dual_track_views.py  system_health.py  trial_preflight.py  web_ui.py  windows_desktop.py
clawdbot/: run.sh  supervisor_prompt.txt
config/: qingtian_hefei_chapter_factors_v1.json
docs/: Windows安装与使用.md  bid.niyoufei.com部署说明.md  health-stability-runtime-boundaries.md  local-llm-evolution-ollama-inventory-v0.1.35.md  local-llm-integration-status-and-boundaries.md  local-llm-ollama-preview-adapter-api-bridge-design.md  local-llm-ollama-preview-adapter-api-bridge-service-smoke-plan.md  local-llm-ollama-preview-adapter-api-bridge-service-smoke-report.md  local-llm-ollama-preview-adapter-api-bridge-stage-review.md  local-llm-ollama-preview-adapter-design.md  local-llm-ollama-preview-adapter-guard-test-design.md  local-llm-ollama-preview-adapter-stage-review.md  local-llm-ollama-preview-real-model-smoke-plan.md  local-llm-ollama-preview-real-model-smoke-report.md  local-llm-ollama-preview-real-model-smoke-stage-review.md  local-llm-ollama-real-response-minimal-sampling-design.md  local-llm-ollama-real-response-minimal-sampling-report.md  local-llm-ollama-real-transport-api-bridge-design.md  local-llm-ollama-real-transport-api-bridge-stage-review.md  local-llm-ollama-real-transport-guard-test-design.md  local-llm-ollama-real-transport-runtime-smoke-report.md  local-llm-ollama-real-transport-runtime-smoke-stage-review.md  local-llm-ollama-real-transport-timeout-model-design.md  local-llm-ollama-response-normalization-invalid-response-design.md  local-llm-ollama-response-normalization-runtime-smoke-report.md  (+27 more)
(+277 files in other folders)
